package jp.ac.uryukyu.ie.e245719;

public abstract class GameObject {
    void initiate(){

    }
    void update(){

    }
    void render(){
        
    }
}
